2003-04-02  Ross Burton  <ross@burtonini.com>

	* src/sj-gstreamer.h:
	* src/sj-gstreamer.c:
	Add a cancel callback, and poke at changing the encoding
	format. This will be rewritten.

	* README: Updated again.

2003-04-01  Ross Burton  <ross@burtonini.com>

	* src/sj-gstreamer.c: Take into account the track starting
	position when reporting progress callbacks.
	* tests/glade-test.c: Fix an Obi-Wan in the album progress bar,
	and record the track duration correctly.

2003-04-01  Ross Burton  <ross@burtonini.com>

	* README: Update to reflect new state -- it works!

	* data/sound-juicer.desktop.in: Added.
	* src/sound-juicer.png: Renamed from grip-48.png
	* data/Makefile.am: Added, install data files.
	* src/Makefile.am: Added, all it does at the moment it automake
	the libbacon updates.
	* Makefile.am: Go into src/ and data/, and remove NOTES as it
	doesn't exist any more.

	* src/sj-gstreamer.c:Markup translatable strings, and remove #if'd
	out code.
	* src/sj-musicbrainz.c: Markup translatable strings

	* po/POTFILES.in: Update
	
	* src/sj-gstreamer.c: Remove a compile warning.

	* data/sound-juicer.glade: Added a Select All menu item, and
	renamed some control.s
	* tests/glade-test.c: Implemented Select All, the album duration
	display, album extract progress, i18nized more strings...

2003-03-31  Ross Burton  <ross@burtonini.com>

	* tests/glade-test.c: Pass a GError to the extract code, and set
	the progress dialog as a transient.
	* src/sj-gstreamer.c: State and callback fixing. Now works!

2003-03-31  Ross Burton  <ross@burtonini.com>

	* src/sj-gstreamer.c: Cleansups.
	* tests/glade-test.c: New rip algorithm, should work...

2003-03-31  Ross Burton  <ross@burtonini.com>

	* tests/Makefile.am (AM_CFLAGS): Whoops, need -export-dynamic
	here. I wonder how it worked...

2003-03-30  Ross Burton  <ross@burtonini.com>

	* README: Add some notes here.
	* NOTES: Remove, its out of date.

2003-03-30  Ross Burton  <ross@burtonini.com>
