@@ -1,5 +1,12 @@
 2003-04-02  Ross Burton  <ross@burtonini.com>
 
+	* data/sound-juicer.glade: Added format buttons to the prefs
+	dialog.
+	* tests/glade-test.c: More poking at setting the encoding format,
+	implement cancelling the rip.
+
+2003-04-02  Ross Burton  <ross@burtonini.com>
+
 	* src/sj-gstreamer.h:
 	* src/sj-gstreamer.c:
 	Add a cancel callback, and poke at changing the encoding
